--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ client/.vscode
 client/.idea
 client/gallery.html
 client/src/storeData.json
-
+client/README.MD
 
 server/.gita
 server/node_modules
@@ -21,3 +21,4 @@ server/.env
 server/src/static
 server/src/db.json
 server/src/config
+server/README.MD
