--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,9 +1,24 @@
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
 node_modules
-.idea
-.vscode
-src/asserts/fontawesome-pro-5.14.0-web
-antd
 dist
-images
-gallery.html
-src/storeData.json
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
