--- a/client/package.json
+++ b/client/package.json
@@ -1,38 +1,40 @@
 {
-  "name": "ecommerce-application",
-  "version": "1.0.0",
+  "name": "vite-project",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "serve": "vite preview",
-    "api": "cd api && yarn dev",
-    "deploy": "node scripts/deploy.js"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^0.21.1",
+    "axios": "^0.27.2",
     "classnames": "^2.3.1",
-    "query-string": "^7.0.1",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
-    "react-redux": "^7.2.4",
-    "react-router-dom": "^5.2.0",
-    "react-slick": "^0.28.1",
-    "react-top-loading-bar": "^2.0.1",
-    "react-transition-group": "^4.4.2",
-    "redux": "^4.1.0",
-    "redux-thunk": "^2.3.0",
-    "sass": "^1.42.1",
-    "slick-carousel": "^1.8.1"
+    "query-string": "^7.1.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
+    "react-redux": "^8.0.2",
+    "react-router-dom": "^6.3.0",
+    "react-top-loading-bar": "^2.1.0",
+    "react-transition-group": "^4.4.5",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
+    "sass": "^1.54.7",
+    "swiper": "^8.3.2"
   },
   "devDependencies": {
-    "@types/node": "^16.6.1",
-    "@types/react": "^17.0.18",
-    "@types/react-dom": "^17.0.0",
-    "@vitejs/plugin-react-refresh": "^1.3.1",
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.4",
-    "tailwindcss": "^2.2.19",
-    "typescript": "^4.3.2",
-    "vite": "^2.3.8"
+    "@types/node": "^18.7.14",
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/react-transition-group": "^4.4.5",
+    "@vitejs/plugin-react": "^2.0.1",
+    "autoprefixer": "^10.4.8",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8",
+    "typescript": "^4.6.4",
+    "vite": "^3.0.7"
   }
 }
