--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,20 +1,20 @@
 {
   "compilerOptions": {
     "target": "ESNext",
+    "useDefineForClassFields": true,
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
-    "allowJs": true,
-    "skipLibCheck": false,
+    "allowJs": false,
+    "skipLibCheck": true,
     "esModuleInterop": false,
-    "noImplicitAny": false,
     "allowSyntheticDefaultImports": true,
-    "strict": false,
+    "strict": true,
     "forceConsistentCasingInFileNames": true,
     "module": "ESNext",
     "moduleResolution": "Node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react",
+    "jsx": "react-jsx",
     "baseUrl": ".",
     "paths": {
       "app/*": ["src/app/*"],
@@ -25,9 +25,10 @@
       "actions/*": ["src/store/actions/*"],
       "reducers/*": ["src/store/reducers/*"],
       "pages/*": ["src/pages/*"],
-      "components/*": ["src/components/*"], 
+      "components/*": ["src/components/*"],
       "UI/*": ["src/components/UI/*"]
     }
   },
-//  "include": ["./src" ]
+  "include": ["src"],
+  "references": [{ "path": "./tsconfig.node.json" }]
 }
