--- a/server/package.json
+++ b/server/package.json
@@ -12,21 +12,20 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "express-session": "^1.17.2",
-    "formidable": "^1.2.2",
+    "express": "^4.18.1",
+    "formidable": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^4.1.2",
+    "mongoose": "^6.5.4",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth": "^2.0.0",
-    "redis": "^4.0.0"
+    "sqlite3": "^5.0.11"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^16.11.0",
     "nodemon": "^2.0.13",
     "ts-node-dev": "^1.1.8",
-    "typescript": "^4.4.4"
+    "typescript": "^4.8.2"
   }
 }
