--- a/client/package.json
+++ b/client/package.json
@@ -35,8 +35,14 @@
     "autoprefixer": "^10.4.8",
     "fs-extra": "^10.1.0",
     "postcss": "^8.4.16",
+    "prettier": "2.7.1",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.6.4",
     "vite": "^3.0.7"
+  },
+  "prettier": {
+    "arrowParens": "always",
+    "bracketSpacing": true,
+    "tabWidth": 4
   }
 }
