--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "dev": "set NODE_ENV=development&ts-node-dev --respawn --transpile-only src/local-server.ts"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.18.1",
@@ -26,9 +27,9 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^16.11.0",
+    "fs-extra": "^10.1.0",
     "nodemon": "^2.0.13",
     "ts-node-dev": "^1.1.8",
-    "fs-extra": "^10.1.0",
     "typescript": "^4.8.2"
   }
 }
