--- a/server/package.json
+++ b/server/package.json
@@ -22,8 +22,7 @@
     "passport-facebook": "^3.0.0",
     "passport-google-oauth": "^2.0.0",
     "serverless-http": "^3.0.2",
-    "sqlite3": "^5.0.11",
-    "uuid": "^9.0.0"
+    "sqlite3": "^5.0.11"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
