--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,8 @@
     "@types/express": "^4.17.14",
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.11.0",
+    "@types/passport": "^1.0.11",
+    "@types/passport-google-oauth": "^1.0.42",
     "fs-extra": "^10.1.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.13",
