--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,34 +1,35 @@
 {
-  "compilerOptions": {
-    "target": "ESNext",
-    "useDefineForClassFields": true,
-    "lib": ["DOM", "DOM.Iterable", "ESNext"],
-    "allowJs": false,
-    "skipLibCheck": true,
-    "esModuleInterop": false,
-    "allowSyntheticDefaultImports": true,
-    "strict": false,
-    "forceConsistentCasingInFileNames": true,
-    "module": "ESNext",
-    "moduleResolution": "Node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx",
-    "baseUrl": ".",
-    "paths": {
-      "app/*": ["src/app/*"],
-      "src/*": ["src/*"],
-      "apis/*": ["src/apis/*"],
-      "scss/*": ["src/scss/*"],
-      "store/*": ["src/store/*"],
-      "actions/*": ["src/store/actions/*"],
-      "reducers/*": ["src/store/reducers/*"],
-      "pages/*": ["src/pages/*"],
-      "components/*": ["src/components/*"],
-      "UI/*": ["src/components/UI/*"]
-    }
+    "compilerOptions": {
+        "target": "ESNext",
+        "useDefineForClassFields": true,
+        "lib": ["DOM", "DOM.Iterable", "ESNext"],
+        "allowJs": false,
+        "skipLibCheck": true,
+        "esModuleInterop": false,
+        "allowSyntheticDefaultImports": true,
+        "strict": false,
+        "forceConsistentCasingInFileNames": true,
+        "module": "ESNext",
+        "noImplicitAny": false,
+        "moduleResolution": "Node",
+        "resolveJsonModule": true,
+        "isolatedModules": true,
+        "noEmit": true,
+        "jsx": "react-jsx",
+        "baseUrl": ".",
+        "paths": {
+          "app/*": ["src/app/*"],
+          "src/*": ["src/*"],
+          "apis/*": ["src/apis/*"],
+          "scss/*": ["src/scss/*"],
+          "store/*": ["src/store/*"],
+          "actions/*": ["src/store/actions/*"],
+          "reducers/*": ["src/store/reducers/*"],
+          "pages/*": ["src/pages/*"],
+          "components/*": ["src/components/*"],
+          "UI/*": ["src/components/UI/*"]
+        }
   },
-  "include": ["src"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+    "include": ["src"],
+    "references": [{ "path": "./tsconfig.node.json" }]
 }
