--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "name": "digital-bazar",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT",
+    "license": "MIT",
   "scripts": {
     "build": "tsc",
     "build2": "tsc && node copy-dir.js",
@@ -10,7 +10,8 @@
     "start": "node dist/server.js",
     "dev2": "set NODE_ENV=development&ts-node-dev --respawn --transpile-only functions/app.ts",
     "dev3": "set NODE_ENV=development&ts-node-dev --respawn --transpile-only src/local-server.ts",
-    "dev": "set NODE_ENV=development&ts-node-dev --respawn --transpile-only ./src/server.ts"
+    "dev4": "set NODE_ENV=development&ts-node-dev --respawn --transpile-only ./src/server.ts",
+    "dev": "ts-node ./src/server.ts"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -34,7 +35,8 @@
     "fs-extra": "^10.1.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.13",
-    "ts-node-dev": "^1.1.8",
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
   }
 }
