--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,8 @@
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
     "sass": "^1.54.7",
-    "swiper": "^8.3.2"
+    "swiper": "^8.3.2",
+    "tailwind-merge": "^1.7.0"
   },
   "devDependencies": {
     "@types/node": "^18.7.14",
