--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "name": "digital-bazar",
   "version": "1.0.0",
   "main": "index.js",
-    "license": "MIT",
+  "license": "MIT",
   "scripts": {
     "build": "tsc",
     "build2": "tsc && node copy-dir.js",
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.32.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.18.1",
