--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.4.2",
     "react-top-loading-bar": "^2.1.0",
     "react-transition-group": "^4.4.5",
+    "recharts": "^2.1.16",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
     "sass": "^1.54.7",
