--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.4.2",
+    "react-toastify": "^9.1.1",
     "react-top-loading-bar": "^2.1.0",
     "react-transition-group": "^4.4.5",
     "recharts": "^2.1.16",
