--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
+    "lodash.clonedeep": "^4.5.0",
     "query-string": "^7.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
