--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.4.0",
+    "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.4.2",
     "react-toastify": "^9.1.1",
