--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
+    "apexcharts": "^3.40.0",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "lodash.clonedeep": "^4.5.0",
     "query-string": "^7.1.1",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.4.0",
