--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.18",
     "@types/jsonwebtoken": "^9.0.3",
+    "@types/passport": "^1.0.13",
     "ts-node-dev": "^2.0.0"
   }
 }
