--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
     "@types/bcryptjs": "^2.4.4",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.18",
+    "@types/formidable": "^3.4.3",
     "@types/jsonwebtoken": "^9.0.3",
     "@types/passport": "^1.0.13",
     "ts-node-dev": "^2.0.0"
